--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -1,19 +1,30 @@
-a {
-  text-decoration: none;
+* {
+    font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
+    padding: 0;
+    margin: 0;
+    color: #454545;
+    box-sizing: border-box;
 }
 
-body{
-    background: white
-}
+  body{
+    background: white;
+   }
 
 .container{
     width: 75%;
-    margin-left: auto;
-    Margin-right: auto;
     max-width: 1180px;
 }
 
 .content { 
     background-color: white;
     padding: 15px;
+    display: flex;
+    flex-flow: column wrap;
 }
+
+a {
+  text-decoration: none;
+}
+
+
+
