--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -51,6 +51,30 @@ input[type=text] {
     border: solid 1px #a2abb5;
 }
 
+.list-item {
+    background-color: rgba(174, 140, 163, 0.3);
+    padding: 5px 10px;
+    border: 1px solid  rgba(174, 140, 163, 0.3);
+    border-radius: 2px;
+    margin: 5px;
+    width: 20%;
+}
+
+.list-container{
+    /* width: 100%; */
+    background-color: white;
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+    padding: 15px;
+    margin-top: 20px;
+    flex-wrap: wrap;
+}
+
+h1 {
+    margin-bottom: 30px;
+}
+
 @media only screen and (min-device-width: 320px) and (max-device-width: 480px) {
     .container {
         width: 100%;
@@ -65,6 +89,22 @@ input[type=text] {
     button {
         width: 100%;
         margin-top: 15px;
+    }
+
+    .list-item {
+        background-color: rgba(174, 140, 163, 0.3);
+        padding: 5px 10px;
+        border: 1px solid  rgba(174, 140, 163, 0.3);
+        border-radius: 5px;
+        margin: 5px;
+        width:100%
+    }
+
+    .list-container{
+        justify-content: center;
+        flex-direction: column;
+        padding: 15px;
+        margin-top: 20px;
     }
 }
 
