--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -1,5 +1,5 @@
 * {
-  font-family: 'Courier New", Courier, monospace';
+  font-family: 'Bookman Old Style, Serif';
   padding: 0;
   margin: 0;
   color: #454545;
